
  http://bugreports.qt.nokia.com/

Each of these identifiers can be entered in the bug tracker to obtain more
information about a particular change.


****************************************************************************
*                       Source incompatible changes                        *
****************************************************************************

- QSslCertificate::subjectInfo() and QSslCertificate::issuerInfo() now
  return a QStringList instead of a QString

- Unite clipping support has been removed from QPainter. The alternative is
  to unite QRegion's and using the result on QPainter.

- QLibrary::resolve() now returns a function pointer instead of a void
  pointer.

- QSslCertificate::alternateSubjectNames() is deprecated (but can be enabled
  via QT_DISABLE_DEPRECATED_BEFORE), use
  QSslCertificate::subjectAlternativeNames() instead.

- QLibraryInfo::buildKey() has been removed. Likewise, the QT_BUILD_KEY
  preprocessor #define has also been removed. The build-key is obsolete
  and is no longer necessary.

- QCoreApplication::translate() will no longer return the source text when
  the translation is empty. Use lrelease -removeidentical for optimization.
  
- Qt::escape() is deprecated (but can be enabled via
  QT_DISABLE_DEPRECATED_BEFORE), use QString::toHtmlEscaped() instead.

- QMetaType::construct() has been renamed to QMetaType::create().

- QTestLib:
  * The QTRY_VERIFY and QTRY_COMPARE macros have been moved into QTestLib.
    These macros formerly lived in tests/shared/util.h but are now provided
    by including the <QtTest/QtTest> header.
  * The QTEST_NOOP_MAIN macro has been removed from the API.  If a test is
    known at compile-time to be inapplicable for a particular build it should
    be omitted via .pro file logic, or the test should call QSKIP in the
    initTestCase() method to skip the entire test and report a meaningful
    explanation in the test log.